@@ -1,0 +1,8 @@
+<?php
+/**
+ * A JSON string of the 2 digit country codes and their corresponding labels
+ */
+
+$region_labels = '{"AI":"Caribbean","AG":"Caribbean","AW":"Caribbean","BS":"Caribbean","BB":"Caribbean","BQ":"Caribbean","KY":"Caribbean","CU":"Caribbean","CW":"Caribbean","DM":"Caribbean","DO":"Caribbean","GD":"Caribbean","GP":"Caribbean","HT":"Caribbean","JM":"Caribbean","MQ":"Caribbean","MS":"Caribbean","PR":"Caribbean","BL":"Caribbean","KN":"Caribbean","LC":"Caribbean","MF":"Caribbean","VC":"Caribbean","SX":"Caribbean","TT":"Caribbean","TC":"Caribbean","VG":"Caribbean","VI":"Caribbean","BZ":"Central America","CR":"Central America","SV":"Central America","GT":"Central America","HN":"Central America","MX":"Central America","NI":"Central America","PA":"Central America","GG":"Channel Islands","JE":"Channel Islands","IO":"Eastern Africa","BI":"Eastern Africa","KM":"Eastern Africa","DJ":"Eastern Africa","ER":"Eastern Africa","ET":"Eastern Africa","TF":"Eastern Africa","KE":"Eastern Africa","MG":"Eastern Africa","MW":"Eastern Africa","MU":"Eastern Africa","YT":"Eastern Africa","MZ":"Eastern Africa","RE":"Eastern Africa","RW":"Eastern Africa","SC":"Eastern Africa","SO":"Eastern Africa","SS":"Eastern Africa","TZ":"Eastern Africa","UG":"Eastern Africa","ZM":"Eastern Africa","ZW":"Eastern Africa","AO":"Middle Africa","CM":"Middle Africa","CF":"Middle Africa","TD":"Middle Africa","CG":"Middle Africa","CD":"Middle Africa","GQ":"Middle Africa","GA":"Middle Africa","ST":"Middle Africa","AR":"South America","BO":"South America","BV":"South America","BR":"South America","CL":"South America","CO":"South America","EC":"South America","FK":"South America","GF":"South America","GY":"South America","PY":"South America","PE":"South America","GS":"South America","SR":"South America","UY":"South America","VE":"South America","BW":"Southern Africa","SZ":"Southern Africa","LS":"Southern Africa","NA":"Southern Africa","ZA":"Southern Africa","BJ":"Western Africa","BF":"Western Africa","CV":"Western Africa","CI":"Western Africa","GM":"Western Africa","GH":"Western Africa","GN":"Western Africa","GW":"Western Africa","LR":"Western Africa","ML":"Western Africa","MR":"Western Africa","NE":"Western Africa","NG":"Western Africa","SH":"Western Africa","SN":"Western Africa","SL":"Western Africa","TG":"Western Africa"}';
+
+return json_decode( $region_labels, true );
